# ChangeLog for net-libs/gnutls
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/gnutls/ChangeLog,v 1.138 2008/01/18 23:08:15 alonbl Exp $

  18 Jan 2008; Alon Bar-Lev <alonbl@gentoo.org> gnutls-2.2.1.ebuild:
  Fix bug#202381, bug#203880

*gnutls-2.2.1 (18 Jan 2008)

  18 Jan 2008; Alon Bar-Lev <alonbl@gentoo.org>
  -files/gnutls-2.2.0-selflink.patch, -gnutls-2.2.0.ebuild,
  +gnutls-2.2.1.ebuild:
  Version bump

  16 Jan 2008; Fabian Groffen <grobian@gentoo.org> gnutls-1.4.4-r1.ebuild,
  gnutls-2.0.4.ebuild, gnutls-2.2.0.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  14 Jan 2008; Christoph Mende <angelos@gentoo.org> gnutls-2.0.4.ebuild:
  Stable on amd64 wrt bug #199297

  10 Jan 2008; Alon Bar-Lev <alonbl@gentoo.org> -gnutls-1.4.5.ebuild,
  -gnutls-1.6.1.ebuild, -gnutls-1.6.2.ebuild, -gnutls-1.6.3.ebuild:
  Cleanup

  08 Jan 2008; Jeroen Roovers <jer@gentoo.org> gnutls-2.0.4.ebuild:
  Stable for HPPA (bug #199297).

  05 Jan 2008; Raúl Porcel <armin76@gentoo.org> gnutls-2.0.4.ebuild:
  alpha/ia64/sparc stable wrt #199297

  03 Jan 2008; Brent Baude <ranger@gentoo.org> gnutls-2.0.4.ebuild:
  Marking gnutls-2.0.4 ppc64 for bug 199297

  03 Jan 2008; Christian Faulhammer <opfer@gentoo.org> gnutls-2.0.4.ebuild:
  stable x86, bug 199297

  03 Jan 2008; Brent Baude <ranger@gentoo.org> gnutls-2.0.4.ebuild:
  Marking gnutls-2.0.4 ppc for bug 199297

  19 Dec 2007; Alon Bar-Lev <alonbl@gentoo.org> gnutls-2.2.0.ebuild:
  Modify libgcrypt dependency, bug#202783, thanks to Ramon

  14 Dec 2007; Alon Bar-Lev <alonbl@gentoo.org>
  +files/gnutls-2.2.0-selflink.patch, gnutls-2.2.0.ebuild:
  Fix selflink issue, bug#202269, thanks to aballier

*gnutls-2.2.0 (14 Dec 2007)

  14 Dec 2007; Alon Bar-Lev <alonbl@gentoo.org> +gnutls-2.2.0.ebuild:
  Version bump

*gnutls-2.0.4 (30 Nov 2007)

  30 Nov 2007; Alon Bar-Lev <alonbl@gentoo.org> -gnutls-2.0.3.ebuild,
  +gnutls-2.0.4.ebuild:
  Version bump, bug#200484
