@@ -13,14 +13,14 @@ EBUILD gnutls-2.0.4.ebuild 1436 RMD160 d42ecdcf9259e92457a89b237ed581c19a741494 
 MD5 46c41beaba723428962ec8ea309d882d gnutls-2.0.4.ebuild 1436
 RMD160 d42ecdcf9259e92457a89b237ed581c19a741494 gnutls-2.0.4.ebuild 1436
 SHA256 cf562ea795bbed27aa91f8c5cf9c6ef65a9b3beb7ceff91005ae49e63e30c70f gnutls-2.0.4.ebuild 1436
-EBUILD gnutls-2.2.1.ebuild 1844 RMD160 fff78d3f43e34bf41f61de9bf2599ba45a283755 SHA1 1f0119a0bbd6c94159c5a58ec4f675903c02d524 SHA256 17996f52779306d6927a19b4b4eab590f49524cf6a01fe2911b486315ddd2b41
-MD5 245efc3797e56c2408b561742e95a1ee gnutls-2.2.1.ebuild 1844
-RMD160 fff78d3f43e34bf41f61de9bf2599ba45a283755 gnutls-2.2.1.ebuild 1844
-SHA256 17996f52779306d6927a19b4b4eab590f49524cf6a01fe2911b486315ddd2b41 gnutls-2.2.1.ebuild 1844
-MISC ChangeLog 20437 RMD160 8ec778b1566a1610f02623323a0251adc5d1a168 SHA1 fe01135304ae73bcf7c7352d3565510d22a1bd6d SHA256 d4d815ac7427f0654c6d8c17844d455a5519bf8b630dad84424810c58977e272
-MD5 442c2b140fce1273e54e086dabff9af6 ChangeLog 20437
-RMD160 8ec778b1566a1610f02623323a0251adc5d1a168 ChangeLog 20437
-SHA256 d4d815ac7427f0654c6d8c17844d455a5519bf8b630dad84424810c58977e272 ChangeLog 20437
+EBUILD gnutls-2.2.1.ebuild 2025 RMD160 c1ac7be743477cbcbdb7b70496f5914ba5ad696c SHA1 5b111ce54eeb043443c3174667de6740567363e4 SHA256 06305c9e7f71e839e11649297cee8d2e8ec455688fe16ab4d1ca9ba312f384ab
+MD5 a543327033080731666bfba13e580912 gnutls-2.2.1.ebuild 2025
+RMD160 c1ac7be743477cbcbdb7b70496f5914ba5ad696c gnutls-2.2.1.ebuild 2025
+SHA256 06305c9e7f71e839e11649297cee8d2e8ec455688fe16ab4d1ca9ba312f384ab gnutls-2.2.1.ebuild 2025
+MISC ChangeLog 20566 RMD160 50f743c13f77b3627c49cf0c55f37a390e23a41a SHA1 34d253144c0e00bf6afef94ed22e1f8a45c65b26 SHA256 ec0f930d808f53c70c62b01a8ff06eeb6335787b10e4135243eca93508de910f
+MD5 6a09b6e51b9c1bf638260b4419682194 ChangeLog 20566
+RMD160 50f743c13f77b3627c49cf0c55f37a390e23a41a ChangeLog 20566
+SHA256 ec0f930d808f53c70c62b01a8ff06eeb6335787b10e4135243eca93508de910f ChangeLog 20566
 MISC metadata.xml 160 RMD160 61ea9f9370afee3db802f40f7c6b2edd2f5347cf SHA1 51cf29a3589cff823294704e225b0de18f65e6dd SHA256 7419f4e73ddd07284403525f1380824fc68280cad69e2dfae0645ad52b33ef10
 MD5 1c3665b87d1e39c6799909da58f41b26 metadata.xml 160
 RMD160 61ea9f9370afee3db802f40f7c6b2edd2f5347cf metadata.xml 160
